Run without nodemanager to improve startup performance